Updated gitignore and added TODO comments

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 
+# Created by https://www.toptal.com/developers/gitignore/api/scala,sbt,metals
+# Edit at https://www.toptal.com/developers/gitignore?templates=scala,sbt,metals
+
+### Metals ###
+.metals/
+.bloop/
+project/**/metals.sbt
+
+
 
 ### SBT ###
 # Simple Build Tool
@@ -21,4 +30,4 @@ project/plugins/project/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# End of https://www.toptal.com/developers/gitignore/api/scala,sbt
+# End of https://www.toptal.com/developers/gitignore/api/scala,sbt,metals
